--- a/src/Components/sidebar/sidebar.css
+++ b/src/Components/sidebar/sidebar.css
@@ -40,19 +40,21 @@
   @apply flex-1 overflow-hidden overflow-y-auto;
 }
 .sidebar-content::-webkit-scrollbar-track {
-  @apply rounded-lg bg-[#f5f5f5];
+  @apply bg-[#f5f5f5] dark:bg-[#686868] 
+  rounded-lg;
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
 .sidebar-content::-webkit-scrollbar {
-  @apply w-2 bg-[#f5f5f5];
+  @apply max-w-[10px] 
+  max-h-[10px] rounded-lg;
 }
 
 .sidebar-content::-webkit-scrollbar-thumb {
-  @apply rounded-lg bg-[#555];
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  @apply bg-[#555] dark:bg-[#bbb] rounded-lg;
 }
 .sidebar-bg-details {
   @apply border-b-[1px] border-b-[lightgray] px-5 py-3;
