--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,6 +13,8 @@
 @import url("../Components/Loader/AnimatedLoader.css");
 @import url("../Components/button/AnimatedIcon.css");
 @import url("../Components/input/ColorPickerWrapper.css");
+@import url("../Components/modal/Modal.css");
+@import url("../Components/button/fabComponent.css");
 
 @tailwind base;
 @tailwind components;
@@ -38,19 +40,21 @@
   @apply absolute;
 }
 .canvas-wrapper::-webkit-scrollbar-track {
-  @apply bg-[#f5f5f5] rounded-lg;
+  @apply bg-[#f5f5f5] dark:bg-[#686868] 
+  rounded-lg;
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
 .canvas-wrapper::-webkit-scrollbar {
-  @apply max-w-[10px] bg-[#f5f5f5] max-h-[10px];
+  @apply max-w-[10px] 
+  max-h-[10px] rounded-lg;
 }
 
 .canvas-wrapper::-webkit-scrollbar-thumb {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  @apply bg-[#555] rounded-lg;
+  @apply bg-[#555] dark:bg-[#bbb] rounded-lg;
 }
 
 #canvas {
