--- a/src/tailwindcss/tailwind.css
+++ b/src/tailwindcss/tailwind.css
@@ -32,6 +32,8 @@
   align-items: center;
   --tw-bg-opacity: 1;
   background-color: rgb(44 44 44 / var(--tw-bg-opacity));
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .dark .navbar {
@@ -40,7 +42,13 @@
 }
 
 .nav-title {
-  margin-left: 3rem;
+  margin-left: 0px;
+}
+
+@media (min-width: 768px) {
+  .nav-title {
+    margin-left: 1rem;
+  }
 }
 
 .span {
@@ -146,8 +154,14 @@
 
 .nav-options-form-base {
   position: relative;
-  min-width: 300px;
+  min-width: 100vw;
   padding: 0.5rem;
+}
+
+@media (min-width: 768px) {
+  .nav-options-form-base {
+    min-width: 300px;
+  }
 }
 
 .nav-options-form {
@@ -236,7 +250,7 @@
   display: flex;
   height: 93vh;
   width: 20vw;
-  min-width: 350px;
+  min-width: 100vw;
   flex-direction: column;
   border-left-width: 1px;
   --tw-border-opacity: 1;
@@ -251,6 +265,12 @@
   border-left-color: rgb(17 24 39 / var(--tw-border-opacity));
   --tw-bg-opacity: 1;
   background-color: rgb(10 10 10 / var(--tw-bg-opacity));
+}
+
+@media (min-width: 976px) {
+  .sidebar-base {
+    min-width: 350px;
+  }
 }
 
 .sidebar-base {
@@ -938,7 +958,6 @@
   margin: 0px;
   height: 100%;
   width: 100%;
-  cursor: pointer;
   padding: 10px;
   opacity: 0;
 }
@@ -1316,13 +1335,17 @@ input[type="color"]::-moz-color-swatch {
 }
 
 .container {
-  width: 100%;
-  padding: 2rem;
+  width: 100% !important;
+  min-width: 100% !important;
+  max-width: 100% !important;
+  padding: 2rem !important;
 }
 
 @media (min-width: 1025px) {
   .container {
-    width: 80%;
+    width: 70% !important;
+    min-width: 70% !important;
+    max-width: 70% !important;
   }
 }
 
@@ -1457,7 +1480,16 @@ input[type="color"]::-moz-color-swatch {
 
 .modal-inline {
   display: flex;
+  flex-direction: column;
   align-items: center;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .modal-inline {
+    flex-direction: row;
+    text-align: start;
+  }
 }
 
 .fab-custom-wrapper {
@@ -2008,6 +2040,30 @@ video {
   width: 100%;
 }
 
+@media (min-width: 200px) {
+  .container {
+    max-width: 200px;
+  }
+}
+
+@media (min-width: 300px) {
+  .container {
+    max-width: 300px;
+  }
+}
+
+@media (min-width: 400px) {
+  .container {
+    max-width: 400px;
+  }
+}
+
+@media (min-width: 500px) {
+  .container {
+    max-width: 500px;
+  }
+}
+
 @media (min-width: 768px) {
   .container {
     max-width: 768px;
@@ -2104,8 +2160,8 @@ video {
   margin-top: 1.25rem;
 }
 
-.ml-3 {
-  margin-left: 0.75rem;
+.ml-0 {
+  margin-left: 0px;
 }
 
 .flex {
@@ -2202,6 +2258,11 @@ video {
   background-color: rgb(12 153 255 / var(--tw-bg-opacity));
 }
 
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -2225,11 +2286,6 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
 }
 
 .text-3xl {
@@ -2259,11 +2315,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .main-container {
@@ -2356,4 +2407,16 @@ video {
 .dark .dark\:text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+@media (min-width: 500px) {
+  .xs2\:flex {
+    display: flex;
+  }
+}
+
+@media (min-width: 768px) {
+  .xs\:ml-3 {
+    margin-left: 0.75rem;
+  }
 }
